--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -73,7 +73,7 @@
 </p><p>FreeCAD funguje konzistentn&#283; na Windows, macOS a Linuxu, i kdy&#382; se proces instalace li&scaron;&iacute; podle platformy. Pro u&#382;ivatele Windows a Mac nab&iacute;z&iacute; komunita FreeCAD p&#345;ipraven&eacute; p&#345;edkompilovan&eacute; instala&#269;n&iacute; programy. Na Linuxu je zdrojov&yacute; k&oacute;d poskytov&aacute;n spr&aacute;vc&#367;m distribuc&iacute;, kte&#345;&iacute; bal&iacute; software pro sv&eacute; konkr&eacute;tn&iacute; syst&eacute;my. Obvykle mohou u&#382;ivatel&eacute; Linuxu nainstalovat FreeCAD p&#345;&iacute;mo prost&#345;ednictv&iacute;m spr&aacute;vce softwaru sv&eacute;ho syst&eacute;mu.
 </p><p>Ofici&aacute;ln&iacute; str&aacute;nka pro sta&#382;en&iacute; FreeCADu se nach&aacute;z&iacute; na <a rel="nofollow" class="external text" href="https://www.freecad.org/downloads.php">str&aacute;nce pro sta&#382;en&iacute; FreeCADu</a>. Dal&scaron;&iacute; informace o instala&#269;n&iacute;m procesu najdete na speci&aacute;ln&iacute; <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Download">wiki str&aacute;nce v&#283;novan&eacute; sta&#382;en&iacute;</a>.
 </p><p><b>Verze FreeCADu</b>
-</p><p>The official stable releases of FreeCAD are available on the referenced download page and within your distribution's software manager. However, FreeCAD's development pace is brisk, with new features and bug fixes incorporated almost daily. Due to the extended periods between stable releases, you may want to experiment with more current, bleeding-edge versions of FreeCAD. These development versions, or pre-releases, can be found at the same download page. For users on Ubuntu or Fedora, the FreeCAD community also provides <a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers/+archive/ubuntu/freecad-daily">PPA</a> (Personal Package Archives) and <a rel="nofollow" class="external text" href="https://copr.fedorainfracloud.org/groups/g/freecad/coprs/">copr</a> 'daily builds', which are regularly updated with the latest developments.
+</p><p>Ofici&aacute;ln&iacute; stabiln&iacute; verze FreeCADu jsou k dispozici na uveden&eacute; str&aacute;nce pro stahov&aacute;n&iacute; a ve spr&aacute;vci softwaru va&scaron;&iacute; distribuce. V&yacute;voj FreeCADu v&scaron;ak prob&iacute;h&aacute; velmi svi&#382;n&#283; a nov&eacute; funkce a opravy chyb jsou p&#345;id&aacute;v&aacute;ny t&eacute;m&#283;&#345; denn&#283;. Vzhledem k del&scaron;&iacute;m interval&#367;m mezi stabiln&iacute;mi verzemi mo&#382;n&aacute; budete cht&iacute;t vyzkou&scaron;et aktu&aacute;ln&#283;j&scaron;&iacute;, nejnov&#283;j&scaron;&iacute; verze FreeCADu. Tyto v&yacute;vojov&eacute; verze, neboli p&#345;edb&#283;&#382;n&eacute; verze, najdete na stejn&eacute; str&aacute;nce pro stahov&aacute;n&iacute;. Pro u&#382;ivatele Ubuntu nebo Fedory poskytuje komunita FreeCAD tak&eacute; <a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers/+archive/ubuntu/freecad-daily">PPA</a> (Personal Package Archives) a <a rel="nofollow" class="external text" href="https://copr.fedorainfracloud.org/groups/g/freecad/coprs/">copr</a> 'denn&iacute; sestaven&iacute;', kter&eacute; jsou pravideln&#283; aktualizov&aacute;ny o nejnov&#283;j&scaron;&iacute; v&yacute;voj.
 </p><p>If you plan to install FreeCAD on a virtual machine, be aware that its performance might be significantly impaired, and perhaps unusable, due to limited OpenGL support in many virtual machines.
 </p>
 <meta property="mw:PageProp/toc">
@@ -158,12 +158,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112015942
+Cached time: 20260112020110
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.139 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.130 seconds
 Preprocessor visited node count: 124/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -174,13 +174,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.030      1 -total
- 72.56%    7.278      1 Template:Manual:TOC
- 56.52%    5.669      1 Manual:Summary/cs
- 22.57%    2.264      2 Template:Docnav
+100.00%    8.933      1 -total
+ 73.08%    6.528      1 Template:Manual:TOC
+ 54.85%    4.900      1 Manual:Summary/cs
+ 21.04%    1.880      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112015942 and revision id 1736878. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020110 and revision id 1736880. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
