--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -75,9 +75,10 @@
 </p><p><b>Verze FreeCADu</b>
 </p><p>Ofici&aacute;ln&iacute; stabiln&iacute; verze FreeCADu jsou k dispozici na uveden&eacute; str&aacute;nce pro stahov&aacute;n&iacute; a ve spr&aacute;vci softwaru va&scaron;&iacute; distribuce. V&yacute;voj FreeCADu v&scaron;ak prob&iacute;h&aacute; velmi svi&#382;n&#283; a nov&eacute; funkce a opravy chyb jsou p&#345;id&aacute;v&aacute;ny t&eacute;m&#283;&#345; denn&#283;. Vzhledem k del&scaron;&iacute;m interval&#367;m mezi stabiln&iacute;mi verzemi mo&#382;n&aacute; budete cht&iacute;t vyzkou&scaron;et aktu&aacute;ln&#283;j&scaron;&iacute;, nejnov&#283;j&scaron;&iacute; verze FreeCADu. Tyto v&yacute;vojov&eacute; verze, neboli p&#345;edb&#283;&#382;n&eacute; verze, najdete na stejn&eacute; str&aacute;nce pro stahov&aacute;n&iacute;. Pro u&#382;ivatele Ubuntu nebo Fedory poskytuje komunita FreeCAD tak&eacute; <a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers/+archive/ubuntu/freecad-daily">PPA</a> (Personal Package Archives) a <a rel="nofollow" class="external text" href="https://copr.fedorainfracloud.org/groups/g/freecad/coprs/">copr</a> 'denn&iacute; sestaven&iacute;', kter&eacute; jsou pravideln&#283; aktualizov&aacute;ny o nejnov&#283;j&scaron;&iacute; v&yacute;voj.
 </p><p>Pokud pl&aacute;nujete nainstalovat FreeCAD na virtu&aacute;ln&iacute; stroj, m&#283;jte na pam&#283;ti, &#382;e jeho v&yacute;kon m&#367;&#382;e b&yacute;t v&yacute;razn&#283; sn&iacute;&#382;en a mo&#382;n&aacute; i nepou&#382;iteln&yacute; kv&#367;li omezen&eacute; podpo&#345;e OpenGL v mnoha virtu&aacute;ln&iacute;ch stroj&iacute;ch.
+</p><p><span id="Installing_on_Windows"></span>
 </p>
 <meta property="mw:PageProp/toc">
-<h3><span class="mw-headline" id="Installing_on_Windows">Installing on Windows</span></h3>
+<h3><span class="mw-headline" id="Instalace_na_Windows">Instalace na Windows</span></h3>
 <ol><li>Download an installer (.exe) from the download page. The FreeCAD installers should work on any Windows version starting from Windows 7.</li>
 <li>Accept the terms of the LGPL license; this will be one of the few cases where you can really, safely click the "accept" button without reading the text. No hidden clauses: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=LicenseAgreement_0212.jpeg&amp;filetimestamp=20240525211552&amp;.html" class="mw-file-description"><img src="../File/LicenseAgreement_0212.jpeg" decoding="async" width="494" height="383" class="mw-file-element" data-file-width="494" data-file-height="383"></a><figcaption></figcaption></figure></li>
 <li>You can leave the default path here, or change it if you wish: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=Path0212.jpeg&amp;filetimestamp=20240525211627&amp;.html" class="mw-file-description"><img src="../File/Path0212.jpeg" decoding="async" width="493" height="380" class="mw-file-element" data-file-width="493" data-file-height="380"></a><figcaption></figcaption></figure></li>
@@ -158,13 +159,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112020124
+Cached time: 20260112020148
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.187 seconds
-Preprocessor visited node count: 124/1000000
+CPU time usage: 0.118 seconds
+Real time usage: 0.191 seconds
+Preprocessor visited node count: 125/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -174,13 +175,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.341      1 -total
- 71.77%    8.140      1 Template:Manual:TOC
- 54.02%    6.126      1 Manual:Summary/cs
- 23.65%    2.682      2 Template:Docnav
+100.00%   13.001      1 -total
+ 71.86%    9.343      1 Template:Manual:TOC
+ 54.69%    7.110      1 Manual:Summary/cs
+ 22.82%    2.967      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020124 and revision id 1736882. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020148 and revision id 1736884. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
