--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -79,11 +79,11 @@
 </p>
 <meta property="mw:PageProp/toc">
 <h3><span class="mw-headline" id="Instalace_na_Windows">Instalace na Windows</span></h3>
-<ol><li>Download an installer (.exe) from the download page. The FreeCAD installers should work on any Windows version starting from Windows 7.</li>
-<li>Accept the terms of the LGPL license; this will be one of the few cases where you can really, safely click the "accept" button without reading the text. No hidden clauses: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=LicenseAgreement_0212.jpeg&amp;filetimestamp=20240525211552&amp;.html" class="mw-file-description"><img src="../File/LicenseAgreement_0212.jpeg" decoding="async" width="494" height="383" class="mw-file-element" data-file-width="494" data-file-height="383"></a><figcaption></figcaption></figure></li>
-<li>You can leave the default path here, or change it if you wish: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=Path0212.jpeg&amp;filetimestamp=20240525211627&amp;.html" class="mw-file-description"><img src="../File/Path0212.jpeg" decoding="async" width="493" height="380" class="mw-file-element" data-file-width="493" data-file-height="380"></a><figcaption></figcaption></figure></li>
-<li>Make sure to check all the components to install: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=Components0212.jpeg&amp;filetimestamp=20240525211655&amp;.html" class="mw-file-description"><img src="../File/Components0212.jpeg" decoding="async" width="493" height="378" class="mw-file-element" data-file-width="493" data-file-height="378"></a><figcaption></figcaption></figure></li>
-<li>That&rsquo;s it. The installation is now complete and you can start exploring the capabilities of FreeCAD.</li></ol>
+<ol><li>St&aacute;hn&#283;te si instala&#269;n&iacute; program (.exe) ze str&aacute;nky pro stahov&aacute;n&iacute;. Instala&#269;n&iacute; programy FreeCADu by m&#283;ly fungovat na v&scaron;ech verz&iacute;ch Windows po&#269;&iacute;naje Windows 7.</li>
+<li>P&#345;ijm&#283;te podm&iacute;nky licence LGPL; toto bude jeden z m&aacute;la p&#345;&iacute;pad&#367;, kdy m&#367;&#382;ete skute&#269;n&#283; bez obav kliknout na tla&#269;&iacute;tko &bdquo;p&#345;ijmout&ldquo;, ani&#382; byste si p&#345;e&#269;etli text. &#381;&aacute;dn&eacute; skryt&eacute; klauzule: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=LicenseAgreement_0212.jpeg&amp;filetimestamp=20240525211552&amp;.html" class="mw-file-description"><img src="../File/LicenseAgreement_0212.jpeg" decoding="async" width="494" height="383" class="mw-file-element" data-file-width="494" data-file-height="383"></a><figcaption></figcaption></figure></li>
+<li>Zde m&#367;&#382;ete ponechat v&yacute;choz&iacute; cestu nebo ji podle pot&#345;eby zm&#283;nit: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=Path0212.jpeg&amp;filetimestamp=20240525211627&amp;.html" class="mw-file-description"><img src="../File/Path0212.jpeg" decoding="async" width="493" height="380" class="mw-file-element" data-file-width="493" data-file-height="380"></a><figcaption></figcaption></figure></li>
+<li>Nezapome&#328;te ozna&#269;it v&scaron;echny komponenty, kter&eacute; chcete nainstalovat: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=Components0212.jpeg&amp;filetimestamp=20240525211655&amp;.html" class="mw-file-description"><img src="../File/Components0212.jpeg" decoding="async" width="493" height="378" class="mw-file-element" data-file-width="493" data-file-height="378"></a><figcaption></figcaption></figure></li>
+<li>To je v&scaron;e. Instalace je nyn&iacute; dokon&#269;ena a m&#367;&#382;ete za&#269;&iacute;t objevovat mo&#382;nosti programu FreeCAD.</li></ol>
 <p><b>Installing a development version</b>
 </p><p>Packaging FreeCAD and developing an installer involves a considerable investment of time and effort. As a result, development versions (also referred to as pre-release versions) are typically delivered in the form of .zip or .7z archives located at the <a rel="nofollow" class="external text" href="https://www.freecad.org/downloads.php">FreeCAD download page</a>. There's no need for a formal installation process with these files; simply extract the contents and start FreeCAD by double-clicking the FreeCAD.exe file located inside. This approach also enables you to maintain both the stable and the "unstable" versions on the same computer. It&rsquo;s like having both a dependable daily car and an experimental jet pack in your garage!
 </p>
@@ -159,12 +159,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112020148
+Cached time: 20260112020354
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.191 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.126 seconds
 Preprocessor visited node count: 125/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -175,13 +175,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.001      1 -total
- 71.86%    9.343      1 Template:Manual:TOC
- 54.69%    7.110      1 Manual:Summary/cs
- 22.82%    2.967      2 Template:Docnav
+100.00%   10.716      1 -total
+ 77.46%    8.300      1 Template:Manual:TOC
+ 47.67%    5.108      1 Manual:Summary/cs
+ 19.21%    2.059      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020148 and revision id 1736884. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020354 and revision id 1736886. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
