--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -86,8 +86,9 @@
 <li>To je v&scaron;e. Instalace je nyn&iacute; dokon&#269;ena a m&#367;&#382;ete za&#269;&iacute;t objevovat mo&#382;nosti programu FreeCAD.</li></ol>
 <p><b>Instalace v&yacute;vojov&eacute; verze</b>
 </p><p>Balen&iacute; FreeCADu a v&yacute;voj instala&#269;n&iacute;ho programu vy&#382;aduje zna&#269;n&eacute; mno&#382;stv&iacute; &#269;asu a &uacute;sil&iacute;. V&yacute;sledkem je, &#382;e v&yacute;vojov&eacute; verze (tak&eacute; ozna&#269;ovan&eacute; jako p&#345;edb&#283;&#382;n&eacute; verze) jsou obvykle dod&aacute;v&aacute;ny ve form&#283; archiv&#367; .zip nebo .7z, kter&eacute; se nach&aacute;zej&iacute; na <a rel="nofollow" class="external text" href="https://www.freecad.org/downloads.php">str&aacute;nce pro stahov&aacute;n&iacute; FreeCADu</a>. S t&#283;mito soubory nen&iacute; t&#345;eba prov&aacute;d&#283;t form&aacute;ln&iacute; instala&#269;n&iacute; proces; sta&#269;&iacute; extrahovat obsah a spustit FreeCAD dvojit&yacute;m kliknut&iacute;m na soubor FreeCAD.exe, kter&yacute; se nach&aacute;z&iacute; uvnit&#345;. Tento p&#345;&iacute;stup v&aacute;m tak&eacute; umo&#382;&#328;uje udr&#382;ovat stabiln&iacute; i &bdquo;nestabiln&iacute;&ldquo; verze na stejn&eacute;m po&#269;&iacute;ta&#269;i. Je to jako m&iacute;t v gar&aacute;&#382;i spolehliv&eacute; auto na ka&#382;dodenn&iacute; pou&#382;&iacute;v&aacute;n&iacute; i experiment&aacute;ln&iacute; jetpack!
+</p><p><span id="Installing_on_Linux"></span>
 </p>
-<h3><span class="mw-headline" id="Installing_on_Linux">Installing on Linux</span></h3>
+<h3><span class="mw-headline" id="Instalace_na_Linuxu">Instalace na Linuxu</span></h3>
 <p>For users of modern Linux distributions such as Ubuntu, Fedora, openSUSE, Debian, Mint, and Elementary, installing FreeCAD is as simple as a single click. You can seamlessly install it through the software management tool provided by your distribution, though the appearance of these tools may differ from any illustrative images since each distribution employs its own distinct application.
 </p>
 <ol><li>Open the software manager and search for "freecad":</li>
@@ -159,13 +160,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112020531
+Cached time: 20260112020554
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.112 seconds
-Preprocessor visited node count: 125/1000000
+CPU time usage: 0.085 seconds
+Real time usage: 0.118 seconds
+Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -175,13 +176,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.341      1 -total
- 70.48%    5.174      1 Template:Manual:TOC
- 46.10%    3.384      1 Manual:Summary/cs
- 23.72%    1.741      2 Template:Docnav
+100.00%    8.598      1 -total
+ 69.10%    5.941      1 Template:Manual:TOC
+ 51.28%    4.409      1 Manual:Summary/cs
+ 26.26%    2.258      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020530 and revision id 1736890. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020554 and revision id 1736892. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
