--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -94,7 +94,7 @@
 <ol><li>Open the software manager and search for "freecad":</li>
 <li>Click the "install" button and that's it, FreeCAD gets installed. Don't forget to rate it afterwards! <br><span typeof="mw:File"><a href="../index.php?title=LinuxInstallation.png&amp;filetimestamp=20240525210437&amp;.html" class="mw-file-description"><img src="../File/LinuxInstallation.png" decoding="async" width="800" height="509" class="mw-file-element" data-file-width="927" data-file-height="590"></a></span></li></ol>
 <p><b>Alternativn&iacute; zp&#367;soby</b>
-</p><p>One of the great pleasures of using Linux is the vast array of options available for customizing your software experience, so don't hold back. For users of Ubuntu and its derivatives, FreeCAD can be installed from a <a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers">PPA</a> maintained by the FreeCAD community, which includes both stable and development versions. On Fedora, you can access the latest development versions of FreeCAD via <a rel="nofollow" class="external text" href="https://copr.fedorainfracloud.org/groups/g/freecad/coprs/">copr</a>. Additionally, since FreeCAD is open source, you also have the freedom to <a href="../Compiling.html" title="Compiling">compile FreeCAD yourself</a>. 
+</p><p>Jednou z velk&yacute;ch v&yacute;hod pou&#382;&iacute;v&aacute;n&iacute; Linuxu je &scaron;irok&aacute; &scaron;k&aacute;la mo&#382;nost&iacute; p&#345;izp&#367;soben&iacute; softwaru, tak&#382;e se nemus&iacute;te dr&#382;et zp&aacute;tky. U&#382;ivatel&eacute; Ubuntu a jeho deriv&aacute;t&#367; mohou FreeCAD nainstalovat z <a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers">PPA</a> spravovan&eacute;ho komunitou FreeCAD, kter&eacute; obsahuje stabiln&iacute; i v&yacute;vojov&eacute; verze. Ve Fedora m&aacute;te p&#345;&iacute;stup k nejnov&#283;j&scaron;&iacute;m v&yacute;vojov&yacute;m verz&iacute;m FreeCADu p&#345;es <a rel="nofollow" class="external text" href="https://copr.fedorainfracloud.org/groups/g/freecad/coprs/">copr</a>.Nav&iacute;c, proto&#382;e je FreeCAD open source, m&aacute;te tak&eacute; mo&#382;nost si <a href="../Compiling.html" title="Compiling">compile FreeCAD zkompilovat sami</a>. 
 </p>
 <h3><span class="mw-headline" id="Installing_on_Mac_OS">Installing on  Mac OS</span></h3>
 <p>Installing FreeCAD on Mac OSX is nowadays as easy as on other platforms. However, since there are fewer people in the community who own a Mac, the available packages sometimes lag a few versions behind the other platforms.
@@ -160,12 +160,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112020624
+Cached time: 20260112020753
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.104 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.171 seconds
 Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -176,13 +176,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.987      1 -total
- 67.97%    4.749      1 Template:Manual:TOC
- 48.12%    3.362      1 Manual:Summary/cs
- 26.22%    1.832      2 Template:Docnav
+100.00%    9.909      1 -total
+ 77.61%    7.690      1 Template:Manual:TOC
+ 58.18%    5.765      1 Manual:Summary/cs
+ 18.65%    1.848      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020624 and revision id 1736894. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020753 and revision id 1736896. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
