--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -95,8 +95,9 @@
 <li>Click the "install" button and that's it, FreeCAD gets installed. Don't forget to rate it afterwards! <br><span typeof="mw:File"><a href="../index.php?title=LinuxInstallation.png&amp;filetimestamp=20240525210437&amp;.html" class="mw-file-description"><img src="../File/LinuxInstallation.png" decoding="async" width="800" height="509" class="mw-file-element" data-file-width="927" data-file-height="590"></a></span></li></ol>
 <p><b>Alternativn&iacute; zp&#367;soby</b>
 </p><p>Jednou z velk&yacute;ch v&yacute;hod pou&#382;&iacute;v&aacute;n&iacute; Linuxu je &scaron;irok&aacute; &scaron;k&aacute;la mo&#382;nost&iacute; p&#345;izp&#367;soben&iacute; softwaru, tak&#382;e se nemus&iacute;te dr&#382;et zp&aacute;tky. U&#382;ivatel&eacute; Ubuntu a jeho deriv&aacute;t&#367; mohou FreeCAD nainstalovat z <a rel="nofollow" class="external text" href="https://launchpad.net/~freecad-maintainers">PPA</a> spravovan&eacute;ho komunitou FreeCAD, kter&eacute; obsahuje stabiln&iacute; i v&yacute;vojov&eacute; verze. Ve Fedora m&aacute;te p&#345;&iacute;stup k nejnov&#283;j&scaron;&iacute;m v&yacute;vojov&yacute;m verz&iacute;m FreeCADu p&#345;es <a rel="nofollow" class="external text" href="https://copr.fedorainfracloud.org/groups/g/freecad/coprs/">copr</a>.Nav&iacute;c, proto&#382;e je FreeCAD open source, m&aacute;te tak&eacute; mo&#382;nost si <a href="../Compiling.html" title="Compiling">FreeCAD zkompilovat sami</a>. 
+</p><p><span id="Installing_on_Mac_OS"></span>
 </p>
-<h3><span class="mw-headline" id="Installing_on_Mac_OS">Installing on  Mac OS</span></h3>
+<h3><span class="mw-headline" id="Instalace_na_Mac_OS">Instalace na Mac OS</span></h3>
 <p>Installing FreeCAD on Mac OSX is nowadays as easy as on other platforms. However, since there are fewer people in the community who own a Mac, the available packages sometimes lag a few versions behind the other platforms.
 </p>
 <ol><li>Download a zipped package corresponding to your version.</li>
@@ -160,13 +161,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112020835
+Cached time: 20260112020844
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 126/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 127/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -176,13 +177,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.046      1 -total
- 72.37%    5.823      1 Template:Manual:TOC
- 54.15%    4.357      1 Manual:Summary/cs
- 22.74%    1.830      2 Template:Docnav
+100.00%    8.030      1 -total
+ 69.10%    5.549      1 Template:Manual:TOC
+ 52.60%    4.224      1 Manual:Summary/cs
+ 24.77%    1.989      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020835 and revision id 1736898. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020844 and revision id 1736900. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
