--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -105,7 +105,9 @@
 <li>Drag the FreeCAD application from inside the zip to the Applications folder: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=Freecad-mac-02.jpg&amp;filetimestamp=20151207140203&amp;.html" class="mw-file-description"><img src="../File/Freecad-mac-02.jpg" decoding="async" width="640" height="454" class="mw-file-element" data-file-width="640" data-file-height="454"></a><figcaption></figcaption></figure></li>
 <li>That's it, FreeCAD is installed! <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=Freecad-mac-03.jpg&amp;filetimestamp=20151207140227&amp;.html" class="mw-file-description"><img src="../File/Freecad-mac-03.jpg" decoding="async" width="640" height="454" class="mw-file-element" data-file-width="640" data-file-height="454"></a><figcaption></figcaption></figure></li>
 <li>If the system prevents FreeCAD from launching due to restricted permissions for applications not coming from the App store, you will need to enable it in the system settings: <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=Freecad-mac-04.jpg&amp;filetimestamp=20151207140245&amp;.html" class="mw-file-description"><img src="../File/Freecad-mac-04.jpg" decoding="async" width="583" height="460" class="mw-file-element" data-file-width="583" data-file-height="460"></a><figcaption></figcaption></figure></li></ol>
-<h3><span class="mw-headline" id="Uninstalling">Uninstalling</span></h3>
+<p><span id="Uninstalling"></span>
+</p>
+<h3><span id="Odinstalov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Odinstalov&aacute;n&iacute;">Odinstalov&aacute;n&iacute;</span></h3>
 <p>Ideally, you'll never want to part ways with FreeCAD, but should you ever need to uninstall it, rest assured the process is simple. On Windows, use the familiar "remove software" option from the control panel. For Linux users, uninstall it using the same software manager you employed to install it. Mac users have it easiest&mdash;just drag FreeCAD from the Applications folder to the trash.
 </p>
 <h3><span class="mw-headline" id="Setting_basic_preferences">Setting basic preferences</span></h3>
@@ -161,13 +163,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112020844
+Cached time: 20260112020919
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.111 seconds
-Preprocessor visited node count: 127/1000000
+CPU time usage: 0.086 seconds
+Real time usage: 0.126 seconds
+Preprocessor visited node count: 128/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -177,13 +179,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.030      1 -total
- 69.10%    5.549      1 Template:Manual:TOC
- 52.60%    4.224      1 Manual:Summary/cs
- 24.77%    1.989      2 Template:Docnav
+100.00%   10.870      1 -total
+ 71.91%    7.816      1 Template:Manual:TOC
+ 46.65%    5.071      1 Manual:Summary/cs
+ 23.84%    2.592      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020844 and revision id 1736900. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020919 and revision id 1736902. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
